--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Swallow</title>
+    <link rel="stylesheet" href="assets/css/_maine.css">
 </head>
 <body>
     <div class="container">
